syntax = "proto3";

package sfc_request;

import "Models/Request/request.proto";

option csharp_namespace = "SFC.Request.Contracts.Messages.Find";

message GetRequestsResponse
{
    repeated Request items = 1;
}