syntax = "proto3";

package sfc_request;

option csharp_namespace = "SFC.Request.Contracts.Messages.Get";

message GetRequestRequest
{
    int64 id = 1;
}