syntax = "proto3";

package sfc_request;

import "Messages/Get/get_request_request.proto";
import "Messages/Get/get_request_response.proto";
import "Messages/Find/get_requests_request.proto";
import "Messages/Find/get_requests_response.proto";

option csharp_namespace = "SFC.Request.Contracts.Services";

service RequestService {
    rpc GetRequest(GetRequestRequest) returns (GetRequestResponse);
    rpc GetRequests(GetRequestsRequest) returns (GetRequestsResponse);
}